
syntax = "proto3";

package avikom.unity;

import "avikom/options/options.proto";
import "avikom/unity/game_object.proto";
import "avikom/unity/waypoint.proto";

option csharp_namespace = "Avikom.Types.Unity";
option go_package = "gitlab.ub.uni-bielefeld.de/avikom/go-types/avikom/unity";
option java_package = "app.avikom.types.unity";


/**
 * This message describes a scene config and contains location-bound parameters.
 * It should also provide semantic anchors for task-specific configurations to be attached. 
 * @author: Alexander Neumann <alneuman@techfak.uni-bielefeld.de>
 */
message SceneConfig {
    option (avikom.options.schema_definition) = true;

    string scene_name = 1 [ (avikom.options.schema).unique = true ];  /// name of the scene the configuration belongs to
    repeated GameObject anchors = 2;                                  /// marked locations that synchronize the real and virtual environment; most likely QR codes
    repeated GameObject assets  = 3;                                  /// objects that are positioned in the scene; may act as anchors for task-specific configurations
    repeated Waypoint waypoints = 4;                                  /// coordinates that represents paths from one asset to antother. used to mark 'save' guidance routes
}
